@@ -29,6 +29,7 @@ MIT Technology Review (technologyreview.com)\
 Nikkei Asian Review (asia.nikkei.com)\
 NRC (nrc.nl)\
 The Boston Globe (bostonglobe.com)\
+The Globe and Mail (theglobeandmail.com)\
 The Mercury News (mercurynews.com)\
 The Morning Call (mcall.com)\
 The Nation (thenation.com)\
@@ -42,6 +43,7 @@ The Seattle Times (seattletimes.com)\
 The Sydney Morning Herald (smh.com.au)\
 The Washington Post (washingtonpost.com)\
 The Wall Street Journal (wsj.com)\
+Vanity Fair (vanityfair.com)\
 Wired (wired.com)
 
 ### Troubleshooting
