@@ -1,5 +1,6 @@
 Updates--
 
+2018-06-22 v1.2.8: Added Vanity Fair (vanityfair.com), added The Globe and Mail (theglobeandmail.com)
 2018-06-03 v1.2.7: Added Wired (wired.com)
 2018-05-20 v1.2.6: Added TheMarker (themarker.com)
 2018-05-12 v1.2.5: Fixed Boston Globe (bostonglobe.com)
@@ -45,6 +46,7 @@ MIT Technology Review (technologyreview.com)
 Nikkei Asian Review (asia.nikkei.com)
 NRC (nrc.nl)
 The Boston Globe (bostonglobe.com)
+The Globe and Mail (theglobeandmail.com)
 The Mercury News (mercurynews.com)
 The Morning Call (mcall.com)
 The Nation (thenation.com)
@@ -58,4 +60,5 @@ The Seattle Times (seattletimes.com)
 The Sydney Morning Herald (smh.com.au)
 The Washington Post (washingtonpost.com)
 The Wall Street Journal (wsj.com)
+Vanity Fair (vanityfair.com)
 Wired (wired.com)
